# project-3

./: .env.example  .gitignore  CLAUDE_CODE_PROMPT_SentinelML.md  PHASE_1_AUDIT.md  PHASE_2_AUDIT.md  PHASE_3_AUDIT.md  PRD_SentinelML_MLOps_Pipeline.md  README.md  docker-compose.verify.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/: Dockerfile  requirements-airflow.txt
airflow/dags/: drift_detection.py  training_pipeline.py
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/dashboard/: AlertBanner.test.tsx  AlertBanner.tsx  KPICard.tsx  TimeSeriesChart.tsx
dashboard/src/components/experiments/: RunsTable.test.tsx  RunsTable.tsx
dashboard/src/components/layout/: AppLayout.tsx  Sidebar.tsx
dashboard/src/components/ui/: primitives.tsx
dashboard/src/hooks/: usePoll.ts
dashboard/src/lib/: chart.test.ts  chart.ts
dashboard/src/pages/: DriftPage.tsx  ExperimentsPage.tsx  OverviewPage.tsx  PipelinePage.tsx  PredictionsPage.tsx
docs/: setup-guide.md
ml/: __init__.py  config.py
ml/data/: __init__.py  ingestion.py  preprocessing.py  validation.py
ml/models/: baseline.py  evaluation.py  transformer.py
ml/monitoring/: __init__.py  alerts.py  drift_detector.py  pipeline_tracking.py
ml/scripts/: demo_setup.py
ml/tracking/: __init__.py  mlflow_utils.py  registry.py
ml/utils/: __init__.py  reproducibility.py
serving/: Dockerfile
serving/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
serving/app/middleware/: rate_limiter.py
serving/app/routes/: health.py  metrics.py  model.py  predict.py
serving/app/services/: metrics_service.py  prediction_logger.py  predictor.py
serving/tests/: conftest.py  test_metrics.py  test_model_loading.py  test_predict.py
tests/: test_airflow_dag_helpers.py  test_alerts.py  test_baseline_training.py  test_data_ingestion.py  test_data_preprocessing.py  test_data_validation.py  test_drift_detector.py  test_evaluation.py  test_mlflow_utils.py  test_pipeline_tracking.py  test_registry.py  test_transformer_training.py
