[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelml"
version = "0.1.0"
description = "End-to-end sentiment analysis ML pipeline with MLOps tooling."
requires-python = ">=3.11"
dependencies = [
  "datasets>=2.20.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "pytest>=8.2.0",
  "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
training = [
  "mlflow>=2.14.0",
  "torch>=2.3.0",
  "transformers>=4.42.0",
]
serving = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "serving/tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["ml*"]
