[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelml"
version = "0.1.0"
description = "End-to-end sentiment analysis ML pipeline with MLOps tooling."
requires-python = ">=3.11,<3.12"
dependencies = [
  "datasets>=2.20.0",
  "matplotlib>=3.9.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0,<16.0.0",
  "pytest>=8.2.0",
  "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
training = [
  "accelerate>=1.1.0",
  "mlflow==2.14.3",
  "setuptools>=68,<81",
  "torch>=2.3.0",
  "transformers>=4.42.0",
]
orchestration = [
  "apache-airflow>=2.9,<2.10",
  "evidently>=0.4.30",
  "mlflow==2.14.3",
  "psycopg2-binary>=2.9.9",
  "requests>=2.32.0",
  "setuptools>=68,<81",
]
serving = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
  "mlflow==2.14.3",
  "setuptools>=68,<81",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.0",
]

[tool.uv]
# Airflow 2.9 pins SQLAlchemy <2.0 while the serving API needs SQLAlchemy 2.0
# async. They are never installed together (serving image uses only --extra
# serving; Airflow installs airflow/requirements-airflow.txt), so lock them apart.
conflicts = [
  [{ extra = "orchestration" }, { extra = "serving" }],
]

[tool.pytest.ini_options]
testpaths = ["tests", "serving/tests"]
pythonpath = ["."]
addopts = "-q"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["ml*"]
